--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ layout: default
   {% include skills.html %}
   {% include workexperience.html %}
   {% include boardexperience.html %}
-  {% include featured-projects.html %}
-  {% include other-projects.html %}
+  <!--{% include featured-projects.html %} -->
+  <!-- {% include other-projects.html %} -->
   {% include footer.html %}
   {% include top-button.html %}
 </div>
