--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: default
   {% include intro.html %}
   {% include background.html %}
   {% include skills.html %}
-  {% include workexperience.html %}
-  {% include boardexperience.html %}
+  {% include currentroles.html %}
+  {% include priorexperience.html %}
   <!--{% include featured-projects.html %} -->
   <!-- {% include other-projects.html %} -->
   {% include footer.html %}
