--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ layout: default
 <div id="site">
   {% include switch.html %}
   {% include intro.html %}
-  {% include background.html %}
   {% include skills.html %}
   {% include currentroles.html %}
   {% include priorexperience.html %}
-  <!--{% include featured-projects.html %} -->
   {% include other-projects.html %}
   {% include footer.html %}
   {% include top-button.html %}
+  <!--{% include featured-projects.html %} -->
+  <!-- {% include background.html %} -->
 </div>
