--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@ layout: default
 ---
 
 <div id="site">
-  {% include switch.html %}
-  {% include intro.html %}
-  {% include skills.html %}
-  {% include currentroles.html %}
-  {% include priorexperience.html %}
-  {% include other-projects.html %}
-  {% include footer.html %}
-  {% include top-button.html %}
+  {% include switch.html %} {% include intro.html %} {% include skills.html %}
+  {% include currentroles.html %} {% include priorexperience.html %} {% include
+  other-projects.html %} {% include footer.html %} {% include top-button.html %}
   <!--{% include featured-projects.html %} -->
-  <!-- {% include background.html %} -->
+  {% include background.html %}
 </div>
