--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div id="site">
-  {% include switch.html %} {% include background.html %}{% include intro.html
-  %} {% include skills.html %} {% include currentroles.html %} {% include
+  {% include switch.html %} {% include intro.html%} {% include background.html%}
+  {% include skills.html %} {% include currentroles.html %} {% include
   priorexperience.html %} {% include other-projects.html %} {% include
   footer.html %} {% include top-button.html %}
   <!--{% include featured-projects.html %} -->
